@@ -14,6 +14,7 @@ version <next>:
 - bonk decoder and demuxer
 - Micronas SC-4 audio decoder
 - LAF demuxer
+- added av_fast_recalloc() to libavutil
 
 
 version 5.1:
